# rust-cli-process

./: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: build.yml
src/: csv_process.rs  lib.rs  main.rs  opts.rs
